--- a/angularFood/src/app/list-food/list-food.component.html
+++ b/angularFood/src/app/list-food/list-food.component.html
@@ -4,23 +4,28 @@
             <form>
                 <div class="form-group">
                     <div class="card-header">Nombre del pedido</div>
-                    <input type="text" class="form-control" id="pedido" placeholder="Ingrese el pedido"  #nombre>
+                    <input type="text" class="form-control" id="pedido" placeholder="Ingrese el pedido" #nombre>
                     <small id="pedidoHelp" class="form-text text-muted">Por favor ingrese el pedido a realizar</small>
                 </div>
                 <div class="form-group">
                     <div class="card-header">Ingredientes</div>
-                    <input type="text" class="form-control" id="ingredientesID" placeholder="Ingrese los ingredientes" #ingredientes>
-                    <small id="ingHelp" class="form-text text-muted">Por favor ingrese los ingredientes del mismo</small>
+                    <input type="text" class="form-control" id="ingredientesID" placeholder="Ingrese los ingredientes"
+                        #ingredientes>
+                    <small id="ingHelp" class="form-text text-muted">Por favor ingrese los ingredientes del
+                        mismo</small>
                 </div>
 
-               <div class="text-center">
-                <button type="submit" class="btn btn-primary col-md-3" id="btnSend" (click)="guardarPed(nombre.value, ingredientes.value)">Enviar</button>
-               </div>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary col-md-3" id="btnSend"
+                        (click)="guardarPed(nombre.value, ingredientes.value)">Enviar</button>
+                </div>
             </form>
         </div>
     </div>
 </div>
 <hr class="mb-5">
-<div class="row row-flex">
-    <app-food-desc *ngFor="let d of pedidos" [pedido]="d"></app-food-desc>
+<div class="container">
+    <div class="row row-flex">
+        <app-food-desc *ngFor="let d of pedidos" [pedido]="d"></app-food-desc>
+    </div>
 </div>
