--- a/wishList/src/app/destino-viaje/destino-viaje.component.html
+++ b/wishList/src/app/destino-viaje/destino-viaje.component.html
@@ -22,6 +22,7 @@
             <a href="#" class="btn-card" (click)="ir()">Ir!</a>
             <span *ngIf="destino.isSelected()">
                 <span ngNonBindable>- PREFERIDO -</span>
-            </span>
+             </span>
+            <a [routerLink]="['/destino']">Ver Detalle</a>
         </div>
     </div>
