--- a/wishList/src/app/destino-viaje/destino-viaje.component.html
+++ b/wishList/src/app/destino-viaje/destino-viaje.component.html
@@ -19,10 +19,15 @@
                 </li>
                 
             </ul>
+            <div>
+                <a href="#" (click)="voteUp()"><i class="material-icons md-18">thumbs_up</i></a>
+                <a href="#" (click)="voteDown()"><i class="material-icons md-18">Thumbs_down</i></a>
+                {{destino.votes}}
+            </div>
             <a href="#" class="btn-card" (click)="ir()">Ir!</a>
             <span *ngIf="destino.isSelected()">
-                <span ngNonBindable>- PREFERIDO -</span>
+                <span ngNonBindable>{{PREFERIDO !}} </span>
              </span>
-            <a [routerLink]="['/destino']">Ver Detalle</a>
+            <a [routerLink]="['/destino', destino.id]">Ver Detalle</a>
         </div>
     </div>
